# rgol

./: Cargo.toml  LICENSE  README.adoc  README.md  rustfmt.toml
docs/: index.html  rgol.1.html
grids/: grid
man/: rgol.1  rgol.1.adoc  rgol.1.md
src/: grid.rs  lib.rs  macros.rs  main.rs  map.rs  screen.rs
src/grid/: cell.rs  error.rs
src/map/: cell.rs
src/world/: mod.rs
src/world/map/: cell.rs  error.rs  mod.rs
