[package]
name = "rgol"
version = "1.0.0"
authors = ["Letheed <letheed-dev@outlook.com>"]
description = "Conway's game of life for terminal"
repository = "https://github.com/letheed/rgol"
readme = "README.md"
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["cargo"] }
signal = "0.7"
